change prefix to work with karabiner

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,8 +9,8 @@
     
     # remap prefix from 'C-b' to 'C-n'
     unbind C-b
-    set-option -g prefix C-n
-    bind-key C-n send-prefix
+    set-option -g prefix C-k
+    bind-key C-k send-prefix
 
     # Configure clock
     setw -g clock-mode-colour colour031
