--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -187,9 +187,12 @@
 
 
     #-----------------------------------------------------------
+    # set -g mode-mouse on
+    # set -g mouse-resize-pane on
+    # set -g mouse-select-pane on
+    # set -g mouse-select-window on
 
-
-
+    set-option -g mouse on
 
 
 
